Kubernetes/ingress/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fleettracker
  namespace: fleettracker
spec:
  ingressClassName: traefik

  rules:
    -  http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 5000
